--- a/client/src/Components/SearchLogin/SearchLogin.css
+++ b/client/src/Components/SearchLogin/SearchLogin.css
@@ -41,7 +41,7 @@
 
 .search-input-button input{
     border: 1px solid #c9c9c9;
-    width: 700px;
+    width: 500px;
     height: 55px;
     box-shadow: 0 1px 3px -2px black;
     font-size: 1.5rem;
@@ -167,9 +167,7 @@ padding: 15px 10px;
     box-shadow: 0 1px 3px -2px black;
     padding-top: 16px; 
     overflow: scroll;
-
-   
-  
+    overflow-x: hidden;
 }
 /* .result-box-close{
     cursor: pointer;
@@ -414,6 +412,14 @@ padding: 15px 10px;
         padding-left: 100px;
     }
 }
+
+.result-box{
+    width: 500px;
+    height: 500px;
+    margin-left: 130px;
+    margin-top: -5px;
+ 
+}
     
 
 @media(max-width: 820px){
@@ -454,13 +460,12 @@ padding: 15px 10px;
            .small-device-search input{
             width: 500px;
             height: 32px;
-            background-image: url('searchicon.png');
             background-position:  10px 12px; 
             background-repeat: no-repeat;
             border: 1px solid #c9c9c9;
             border-radius: 10px;
             box-shadow: 0 1px 3px -2px black;
-            font-size: 1.8rem;
+            font-size: 1rem;
             color: #626262;
             padding-left: 2%;
            }
@@ -479,6 +484,7 @@ padding: 15px 10px;
         }
           .icon-search{
             display: block;
+            
         }
         .small-device-search input::placeholder{
             padding-left: 5%;
@@ -633,7 +639,6 @@ padding: 15px 10px;
 
            .small-device-search input{
             height: 32px;
-            background-image: url('searchicon.png');
             background-position:  10px 12px; 
             background-repeat: no-repeat;
             border: 1px solid #c9c9c9;
@@ -731,13 +736,12 @@ padding: 15px 10px;
            .small-device-search input{
             width: 20rem;
             height: 2rem;
-            background-image: url('searchicon.png');
             background-position:  10px 12px; 
             background-repeat: no-repeat;
             border: 1px solid #c9c9c9;
             border-radius: 10px;
             box-shadow: 0 1px 3px -2px black;
-            font-size: 1.8rem;
+            font-size: 1rem;
             color: #626262;
             padding-left: 5%;
            }
@@ -811,6 +815,7 @@ padding: 15px 10px;
 
            .small-device-search input{
             width: 14rem;
+            font-size: 18px;
            }
 
            .nav-menu-space{
@@ -821,6 +826,14 @@ padding: 15px 10px;
        
     
 }
+.result-box{
+    width: 300px;
+    height: 500px;
+    margin-left: 50px;
+    margin-top: -5px;
+
+}
+    
 
 @media(max-width: 375px){
     .container{
