--- a/client/src/Components/WomenBestSeller/WomenBestSeller.css
+++ b/client/src/Components/WomenBestSeller/WomenBestSeller.css
@@ -55,7 +55,8 @@
 }
 
 
-@media(max-width: 480px) {
+
+@media(max-width: 435px) {
   .best-seller-container {
     width: 100%;
     padding: 0 1rem;
@@ -63,7 +64,7 @@
 
   .best-seller {
     width: 100%;
-    max-width: 435px;
+    max-width: 430px;
     align-items: center;
   }
 
@@ -73,14 +74,14 @@
   }
 
   .best-seller-container h1 {
-    font-size: 1rem;
+    font-size: 1.5rem;
     text-align: center;
     margin: 1.5rem auto 0;
   }
 
   .best-seller-item {
-    grid-template-columns: 1fr;
-
+    display: grid !important;
+     grid-template-columns: repeat(2, 1fr)!important;
+    gap: 1rem !important;
   }
 }
-
