--- a/client/src/Components/HeroSection/HeroSection.css
+++ b/client/src/Components/HeroSection/HeroSection.css
@@ -148,7 +148,7 @@ color: black;
 
 
 /* Mobile responsive layout */
-@media (max-width: 768px) {
+@media (max-width: 1024px) {
 
   .hero-top {
     flex-direction: column;
@@ -174,13 +174,19 @@ color: black;
   }
 
   .banner-alt-img {
-    width: 250px;
+    width: 300px;
     height: 150px;
     border-radius: 10px;
     object-fit: cover;
     scroll-snap-align: start;
     flex-shrink: 0;
+    scroll-snap-align: start;
+    transition: transform 0.3s ease;
   }
+
+  .banner-alt-img:hover {
+  transform: scale(1.02);
+}
 
   .hero-right-cards {
     flex-direction: column;
