--- a/client/src/Components/SearchLogin/SearchLogin.css
+++ b/client/src/Components/SearchLogin/SearchLogin.css
@@ -804,7 +804,7 @@ padding: 15px 10px;
         width: 100%; 
     }
     .search-bar{
-        gap: 50px;
+        gap: 110px;
     }
 
     .small-device-search{
@@ -825,13 +825,31 @@ padding: 15px 10px;
         }
        
     
-}
+
 .result-box{
     width: 300px;
     height: 500px;
     margin-left: 50px;
     margin-top: -5px;
 
+}
+.search-login-cart{
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+
+.icon {
+  color: #515151;
+  width: 2rem !important;
+  height: 2rem !important;
+  margin: 3px 4px;
+  transition: color 0.2s ease-in-out;
+}
+
+.icon:hover {
+  color: #b90404;
+}
 }
     
 
